Se agrego el trailer de la pelicula

--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
                 <img src="Imagenes/Look Back Poster Oct 4 2024.jpg">
             </div>
         </section>
+        
+        <center>
+            <h2>Trailer de la pelicula</h2>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/ahXmiId65-s" title="Trailer de la pelicula Look Back" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen aria-describedby="Trailer"></iframe>
+        </center>
     </main>
 
     <script src="script.js"></script>
