--- a/comentarios.html
+++ b/comentarios.html
@@ -6,6 +6,19 @@
     <title>Comentarios</title>
 </head>
 <body>
+    <a href="#contenido" class="saltarse">Saltar al contenido principal</a>
     
+    <header id="header" class="header" role="banner">
+        <button aria-expanded="false" aria-controls="main-nav" id="menu"aria-label="Abrir menú de navegación">
+            Menú
+        </button>
+        <nav id="main-nav" role="navigation" aria-label="Menú principal" hidden>
+            <ul role="menu">
+                <li><a role="menuitem" aria-current="page" href="index.html"> Inicio</a></li>
+                <li><a role="menuitem" href="personajes.html"> Personajes</a></li>
+                <li><a role="menuitem" href="comentarios.html"> Comentarios</a></li>
+            </ul>
+        </nav>
+    </header>
 </body>
 </html>
