se hizo mas accesible

--- a/comentarios.html
+++ b/comentarios.html
@@ -14,9 +14,9 @@
         </button>
         <nav id="main-nav" role="navigation" aria-label="Menú principal" hidden>
             <ul role="menu">
-                <li><a role="menuitem" aria-current="page" href="index.html"> Inicio</a></li>
+                <li><a role="menuitem" href="index.html"> Inicio</a></li>
                 <li><a role="menuitem" href="personajes.html"> Personajes</a></li>
-                <li><a role="menuitem" href="comentarios.html"> Comentarios</a></li>
+                <li><a role="menuitem" aria-current="page"> Comentarios</a></li>
             </ul>
         </nav>
     </header>
