ultimos cambios (creo)

--- a/comentarios.html
+++ b/comentarios.html
@@ -56,6 +56,13 @@
                 </form>
             </fieldset>
         </section>
+
+        <figure>
+            <blockquote cite="Look Back">
+                "Fujino requiere colaborar con Kyōmoto para crecer y mejorar como artista; la segunda necesita a la primera para experimentar el mundo." 
+            <figcaption>— Lalo ortega</figcaption>
+            </blockquote>
+        </figure>
     </main>
 
     <script src="script.js"></script>
