--- a/index.html
+++ b/index.html
@@ -34,6 +34,7 @@
             <div class="presentacion">
                 <figure class="columna img1">
                     <img src="Imagenes/Look Back Still 01.png" alt="Escena de Look Back mostrando a las protagonistas">
+                    <figcaption>Fujino y Kyomoto juntas</figcaption>
                 </figure>
                 
                 <article class="columna sinopsis" aria-labelledby="sinopsis-titulo">
@@ -68,8 +69,9 @@
                     </div>
                 </article>
 
-                <figure class="columna img2">
+                <figure class="columna img">
                     <img src="Imagenes/Look Back Poster Oct 4 2024.jpg" alt="Póster oficial de Look Back">
+                    <figcaption>Póster Look Back</figcaption>
                 </figure>
             </div>
         </section>
