--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
     <main id="contenido" role="main">
         <div class="lookback" role="region" aria-label="Portada de Look Back">
-            <h1>Look Back</h1>
+            <h1 tabindex="0" >Look Back</h1>
         </div>
         
         <section aria-labelledby="informacion">
