--- a/personajes.html
+++ b/personajes.html
@@ -10,10 +10,10 @@
 </head>
 
 <body>
-    <a href="#contenido" class="saltarse">Saltar al contenido principal</a>
-    
+    <a href="#tab-1" class="saltarse">Saltar al contenido principal</a>
+
     <header id="header" class="header" role="banner">
-        <button aria-expanded="false" aria-controls="main-nav" id="menu"aria-label="Abrir menú de navegación">
+        <button aria-expanded="false" aria-controls="main-nav" id="menu" aria-label="Abrir menú de navegación">
             Menú
         </button>
         <nav id="main-nav" role="navigation" aria-label="Menú principal" hidden>
@@ -24,9 +24,9 @@
             </ul>
         </nav>
     </header>
-    
+
     <main>
-        <div role="tablist">
+        <div role="tablist"></div>
             <button role="tab" id="tab-1" aria-selected="true" aria-controls="panel-1" title="Ayumu Fujino">
                 Ayumu Fujino
             </button>
