--- a/personajes.html
+++ b/personajes.html
@@ -37,8 +37,51 @@
         
         <div role="tabpanel" id="panel-1" aria-labelledby="tab-1">
             <article class="wiki-content">
+                
+                <div class="main-content">
+                <h2 tabindex="0">Ayumu Fujino</h2>
+                <p tabindex="0">
+                    Ayumu Fujino es la protagonista principal del manga one-shot "Look
+                    Back". Es una joven apasionada por dibujar manga, cuya identidad inicial
+                    se basa en ser la mejor artista de su clase. Su vida y su propósito
+                    para dibujar cambian drásticamente tras conocer a Kyomoto, una compañera
+                    de clase con un talento artístico superior.
+                </p>
+
+                <h3 tabindex="0">Personalidad</h3>
+                <p tabindex="0">
+                    Externamente, Ayumu es sociable y segura, pero internamente lucha contra
+                    la inseguridad, el orgullo y los celos. Su motivación inicial para
+                    dibujar es la validación externa y el aplauso. Cuando se siente
+                    amenazada o herida, puede arremeter de forma pasivo-agresiva, como se ve
+                    en su reacción cruel cuando Kyomoto decide ir a la escuela de arte.
+                    Esta complejidad la hace un personaje profundamente humano y falible.
+                </p>
+
+                <h3 tabindex="0">Arco de Personaje</h3>
+                <p tabindex="0">
+                    El viaje de Fujino es el de una artista que debe encontrar su verdadera
+                    razón para crear. Comienza dibujando por <strong>orgullo</strong>,
+                    impulsada por la necesidad de superar a su rival, Kyomoto. Tras
+                    conocerla, su motivación cambia hacia la
+                    <strong>colaboración y la alegría compartida</strong>, formando una
+                    amistad simbiótica que define su adolescencia y su carrera.
+                </p>
+                <p tabindex="0">
+                    La separación, causada por su propio miedo al abandono, la lleva a un
+                    punto de inflexión. La trágica muerte de Kyomoto la sumerge en un
+                    profundo <strong>duelo y arrepentimiento</strong>, atormentada por la
+                    culpa. El arco de Fujino culmina en una fase de
+                    <strong>aceptación y propósito renovado</strong>. Al descubrir que ella
+                    siempre fue la inspiración de Kyomoto, encuentra una motivación interna
+                    y altruista: seguir dibujando para que su amiga, donde sea que esté,
+                    tenga algo que leer. Su arte se transforma de un acto de ego a un acto
+                    de amor.
+                </p>
+                </div>
+
                 <aside class="infobox">
-                <table>
+                <table tabindex="0">
                     <caption>
                     Ayumu Fujino
                     </caption>
@@ -63,55 +106,53 @@
                     </tbody>
                 </table>
                 </aside>
-
-                <div class="main-content">
-                <h2>Ayumu Fujino</h2>
-                <p>
-                    Ayumu Fujino es la protagonista principal del manga one-shot "Look
-                    Back". Es una joven apasionada por dibujar manga, cuya identidad inicial
-                    se basa en ser la mejor artista de su clase. Su vida y su propósito
-                    para dibujar cambian drásticamente tras conocer a Kyomoto, una compañera
-                    de clase con un talento artístico superior.
-                </p>
-
-                <h3>Personalidad</h3>
-                <p>
-                    Externamente, Ayumu es sociable y segura, pero internamente lucha contra
-                    la inseguridad, el orgullo y los celos. Su motivación inicial para
-                    dibujar es la validación externa y el aplauso. Cuando se siente
-                    amenazada o herida, puede arremeter de forma pasivo-agresiva, como se ve
-                    en su reacción cruel cuando Kyomoto decide ir a la escuela de arte.
-                    Esta complejidad la hace un personaje profundamente humano y falible.
-                </p>
-
-                <h3>Arco de Personaje</h3>
-                <p>
-                    El viaje de Fujino es el de una artista que debe encontrar su verdadera
-                    razón para crear. Comienza dibujando por <strong>orgullo</strong>,
-                    impulsada por la necesidad de superar a su rival, Kyomoto. Tras
-                    conocerla, su motivación cambia hacia la
-                    <strong>colaboración y la alegría compartida</strong>, formando una
-                    amistad simbiótica que define su adolescencia y su carrera.
-                </p>
-                <p>
-                    La separación, causada por su propio miedo al abandono, la lleva a un
-                    punto de inflexión. La trágica muerte de Kyomoto la sumerge en un
-                    profundo <strong>duelo y arrepentimiento</strong>, atormentada por la
-                    culpa. El arco de Fujino culmina en una fase de
-                    <strong>aceptación y propósito renovado</strong>. Al descubrir que ella
-                    siempre fue la inspiración de Kyomoto, encuentra una motivación interna
-                    y altruista: seguir dibujando para que su amiga, donde sea que esté,
-                    tenga algo que leer. Su arte se transforma de un acto de ego a un acto
-                    de amor.
-                </p>
-                </div>
             </article>
         </div>
 
         <div role="tabpanel" id="panel-2" aria-labelledby="tab-2" hidden>
             <article class="wiki-content">
+
+                <div class="main-content">
+                <h2 tabindex="0">Kyomoto</h2>
+                <p tabindex="0">
+                    Kyomoto es la deuteragonista de "Look Back". Es una joven extremadamente
+                    talentosa para el dibujo, especialmente fondos y escenarios, que vive
+                    recluida en su casa debido a una severa ansiedad social. Su vida cambia
+                    por completo cuando conoce a Fujino, su ídolo.
+                </p>
+
+                <h3 tabindex="0">Personalidad</h3>
+                <p>
+                    Kyomoto es increíblemente tímida, mansa y sufre de agorafobia, lo que le
+                    impide asistir a la escuela. Su mundo gira en torno al manga, y es una
+                    admiradora devota del trabajo de Fujino. A través de su amistad, Kyomoto
+                    comienza a ganar confianza, volviéndose más sociable y aventurera, hasta
+                    el punto de desear explorar el mundo por su cuenta.
+                </p>
+
+                <h3 tabindex="0">Arco de Personaje</h3>
+                <p tabindex="0">
+                    El arco de Kyomoto es una historia de
+                    <strong>crecimiento y valentía</strong>. Comienza en un estado de
+                    <strong>aislamiento total</strong>, donde el arte es su único refugio y
+                    Fujino es su única conexión con el mundo exterior. La amistad con
+                    Fujino rompe su caparazón, y la colaboración creativa se convierte en el
+                    puente que le permite salir de su habitación y experimentar la vida.
+                </p>
+                <p tabindex="0">
+                    Su arco culmina en un acto de
+                    <strong>independencia y autoafirmación</strong>: la decisión de asistir
+                    a una escuela de arte para mejorar sus habilidades y dejar de depender
+                    de Fujino. Este paso, que representa la cima de su desarrollo personal,
+                    se convierte en una trágica ironía. Su muerte en un ataque sin sentido
+                    no es una consecuencia de sus acciones, sino un reflejo de un mundo
+                    indiferente y cruel. Su viaje, aunque interrumpido, es la prueba de que
+                    el arte y la amistad tienen el poder de transformar una vida.
+                </p>
+                </div>
+
                 <aside class="infobox">
-                <table>
+                <table tabindex="0">
                     <caption>
                     Kyomoto
                     </caption>
@@ -136,45 +177,6 @@
                     </tbody>
                 </table>
                 </aside>
-
-                <div class="main-content">
-                <h2>Kyomoto</h2>
-                <p>
-                    Kyomoto es la deuteragonista de "Look Back". Es una joven extremadamente
-                    talentosa para el dibujo, especialmente fondos y escenarios, que vive
-                    recluida en su casa debido a una severa ansiedad social. Su vida cambia
-                    por completo cuando conoce a Fujino, su ídolo.
-                </p>
-
-                <h3>Personalidad</h3>
-                <p>
-                    Kyomoto es increíblemente tímida, mansa y sufre de agorafobia, lo que le
-                    impide asistir a la escuela. Su mundo gira en torno al manga, y es una
-                    admiradora devota del trabajo de Fujino. A través de su amistad, Kyomoto
-                    comienza a ganar confianza, volviéndose más sociable y aventurera, hasta
-                    el punto de desear explorar el mundo por su cuenta.
-                </p>
-
-                <h3>Arco de Personaje</h3>
-                <p>
-                    El arco de Kyomoto es una historia de
-                    <strong>crecimiento y valentía</strong>. Comienza en un estado de
-                    <strong>aislamiento total</strong>, donde el arte es su único refugio y
-                    Fujino es su única conexión con el mundo exterior. La amistad con
-                    Fujino rompe su caparazón, y la colaboración creativa se convierte en el
-                    puente que le permite salir de su habitación y experimentar la vida.
-                </p>
-                <p>
-                    Su arco culmina en un acto de
-                    <strong>independencia y autoafirmación</strong>: la decisión de asistir
-                    a una escuela de arte para mejorar sus habilidades y dejar de depender
-                    de Fujino. Este paso, que representa la cima de su desarrollo personal,
-                    se convierte en una trágica ironía. Su muerte en un ataque sin sentido
-                    no es una consecuencia de sus acciones, sino un reflejo de un mundo
-                    indiferente y cruel. Su viaje, aunque interrumpido, es la prueba de que
-                    el arte y la amistad tienen el poder de transformar una vida.
-                </p>
-                </div>
             </article>
             </div>
     </main>
